Bug 402814 - Initial state of "View/Show all accounts" is not correct
Summary: Initial state of "View/Show all accounts" is not correct
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: general (other bugs)
Version First Reported In: 5.0.2
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-01-03 09:42 UTC by Thomas Baumgart
Modified: 2019-01-03 10:19 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.0.3
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Thomas Baumgart 2019-01-03 09:42:41 UTC
STEPS TO REPRODUCE
1. Select "View/Show all accounts" to be turned on
2. Exit program / Start again
3. "View/Show all accounts" is not marked but all accounts are shown

OBSERVED RESULT
Report configuration shows closed accounts though the option is not set

EXPECTED RESULT
Option reflects current setting after program start

SOFTWARE/OS VERSIONS
Windows: 
MacOS: 
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 
KDE Frameworks Version: 
Qt Version: 

ADDITIONAL INFORMATION
Comment 1 Thomas Baumgart 2019-01-03 10:19:16 UTC
Git commit 6ae4b64acfcdbd1b1d2ff09fbb022957fe8aa647 by Thomas Baumgart.
Committed on 03/01/2019 at 09:47.
Pushed by tbaumgart into branch '5.0'.

Fix initial state of "View/Show all accounts"

In some circumstances, the initial display of the "View/Show all
accounts" option was not correct. This change sets the initial state
according to the setting after program start.
FIXED-IN: 5.0.3

M  +1    -1    kmymoney/kmymoney.cpp

https://commits.kde.org/kmymoney/6ae4b64acfcdbd1b1d2ff09fbb022957fe8aa647