Fix initial state of "View/Show all accounts"

In some circumstances, the initial display of the "View/Show all
accounts" option was not correct. This change sets the initial state
according to the setting after program start.

BUG: 402814
FIXED-IN: 5.0.3